--- a/InteractiveStory/Base.lproj/Main.storyboard
+++ b/InteractiveStory/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xab-EZ-bad">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="InteractiveStory" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,72 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Beginning" translatesAutoresizingMaskIntoConstraints="NO" id="znM-Fu-Tg8">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RG9-LN-dPn">
+                                <rect key="frame" x="250.5" y="525" width="99" height="30"/>
+                                <state key="normal" title="Start Aventure"/>
+                                <connections>
+                                    <segue destination="jcI-cY-0Hc" kind="show" id="QOr-Po-Jeg"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="znM-Fu-Tg8" secondAttribute="bottom" id="FMI-s6-fVS"/>
+                            <constraint firstAttribute="trailing" secondItem="znM-Fu-Tg8" secondAttribute="trailing" id="fl2-Ix-3mU"/>
+                            <constraint firstItem="znM-Fu-Tg8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="o3m-UJ-I3H"/>
+                            <constraint firstItem="RG9-LN-dPn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sSR-qY-zej"/>
+                            <constraint firstItem="znM-Fu-Tg8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="uaB-Iv-v9u"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="RG9-LN-dPn" secondAttribute="bottom" constant="45" id="wxU-Io-3SQ"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="HnC-L8-TNo"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1412" y="496"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="nHb-Up-SNh">
+            <objects>
+                <viewController id="jcI-cY-0Hc" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="c0B-61-2fJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="dRm-l8-8mh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tUF-Yj-wg7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ij3-LC-Xz1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2085" y="503"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="331-gz-hT9">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xab-EZ-bad" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fw4-4S-VCr">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="aJ5-Yi-Dxs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vVj-0Y-vqu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="600" y="1156"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Beginning" width="320" height="569"/>
+    </resources>
 </document>
